update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -9,6 +9,9 @@ contributor:
     gutenberg_agent_id: '43146'
     url: http://www.gutenberg.org/2009/agents/43146
     wikipedia: https://en.wikipedia.org/wiki/Frank_Brangwyn
+covers:
+- cover_type: archival
+  image_path: 74057-h/images/cover.jpg
 creator:
   author:
     agent_name: Sparrow, Walter Shaw
@@ -21,6 +24,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/39936
     wikipedia: https://en.wikipedia.org/wiki/Walter_Shaw_Sparrow
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74057#A-book-of-bridges
 gutenberg_issued: '2024-07-16'
 gutenberg_type: Text
 identifiers:
